team+strategy+support

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="box">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
               <h3>Team</h3>
-              <p>Our team of highly skilled IT consultants brings a wealth of industry-leading expertise to the table. With years of experience across various domains and technologies, we stay ahead of the curve, ensuring that you benefit from the latest advancements and best practices.</p>
+              <p>Our team is a group of seasoned IT consultants, well-versed in various technological realms. By maintaining an up-to-date understanding of advancements, we deliver high-quality industry expertise.</p>
             </div>
           </div>
 
@@ -192,7 +192,7 @@
             <div class="box">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
               <h3>Strategy</h3>
-              <p>We understand that technology is not just a means to an end but a powerful driver of business success. Our consultants work closely with you to develop a comprehensive technology roadmap aligned with your organizational goals. We identify opportunities for digital transformation, outline implementation strategies, and prioritize initiatives that deliver maximum value. </p>
+              <p>At Fumetsu, technology is perceived as a catalyst for business achievement. Our consultants devise technology roadmaps that align with your business objectives, offering comprehensive digital solutions.</p>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
             <div class="box">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
               <h3>Support</h3>
-              <p>Engaging with customers throughout the software development cycle, actively seeking feedback, and understanding their needs ensures the delivery of products that align with their expectations. Additionally, providing excellent customer support, addressing issues promptly, and continuously improving user experience and building long-term customer relationships. </p>
+              <p>We offer unrivaled customer support, maintaining active engagement throughout the product lifecycle. Our commitment to addressing issues promptly cultivates lasting customer relationships.</p>
             </div>
           </div>
 
