custom fumetsu logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/fumetsulogos/icon/1x/Asset 1.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -43,8 +43,8 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/fumetsu.png" alt="">
-        <span>Fumetsu</span>
+        <img src="assets/img/fumetsulogos/logo/3x/Asset 2@3x.png" alt="">
+        <!-- <span>Fumetsu</span> -->
       </a>
 
       <nav id="navbar" class="navbar">
@@ -627,9 +627,9 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/fumetsu.png" alt="">
+              <img src="assets/img/fumetsulogos/logo/3x/Asset 2@3x.png" alt="">
               
-<span>Fumetsu</span>
+<!-- <span>Fumetsu</span> -->
 </a>
 <p>Fumetsu, a pioneer in digital innovation, embodies dedication and quality. Our journey is to continually transform technology, fueling progress and empowering businesses.</p>
             <div class="social-links mt-3">
